css/style.css
html,body,nav,a,h1,footer,h2,h3,h4,h5,span,div,img,p,button,iframe{
    margin: 0px;
    padding: 0px;
    border: 0px;
}
html{width: 100%;height: 100%;}
body{width: 100%;height: 100%;}

@font-face {
    font-display: swap;
    font-family: 'Phudu';
    font-style: normal;
    font-weight: 500;
    src: url('../fonts/Phudu/Phudu-VariableFont_wght.ttf') format('ttf');
  }

  /* poppins-regular - latin */
@font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 400;
    src: url('../fonts/Poppins/Poppins-Black.ttf') format('ttf'); 
  }
  

.homebar{
    width: 100%;
    display: flex;
    justify-content: space-around;
    background-color: #f1a536;
    height: 150px;
    align-items: center;
}
.logo{
    height: 100%;
}
.contentHolder{
    width: 100%;
    height: 100%;
    font-family: 'Poppins', sans-serif;
}
nav{
    display: inline-flex;
    justify-content: space-between;
    width: 700px;
}
nav>a{
    display: inline;
    color: black;
    text-decoration: none;
    font-size: 150%;
    margin: 0px 10px;
}
nav>a:hover{
    text-decoration: underline;
}
#homePage{
    background-image: url(/images/hero-image.jpg);
    height: 100%;
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    align-items: flex-end;
    justify-content: center;
}
#homePage>p,#recipeHomePage>p{
    background-color: white;
    display: inline-block;
    height: fit-content;
    margin: 250px;
    font-size: 28pt;
    font-weight: 700;
    padding: 10px;
}
.foodInfo{
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    align-items: center;
    height: fit-content;
    padding: 50px;
    gap: 40px;
}
.foodInfo>h1{
    align-self: flex-start;
    font-size: 30pt;
}
.description{
    font-size: 26pt;
}
.foodImg{
    display: flex;
    flex-flow: row wrap;
    width: 100%;
    height: 80%;
    justify-content: space-between;
}
.foodcard{
    width: 31%;
}
.foodImg img{
    order: 1;
    height: 90%;
    width: 100%;
    object-fit: cover;
}
.foodImg p{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20pt;
    height: 10%;
}
.foodInfo:nth-child(even){
    background-color: #DADFEA;
}
.foodInfo:nth-child(even)>.foodImg{
    gap: 5px;
}
.foodInfo:nth-child(even) .foodcard{
    width: 24%;
}
.foodInfo:nth-child(even)>.foodImg p{
    background-color: #fff;
}
.foodInfo:last-of-type img{
    border: 5px #DADFEA solid;
}
.foodInfo:last-of-type{
    margin-bottom: 5%;
}
footer{
    width: 100%;
    display: flex;
    background-color: #f1a536;
    height: 12%;
    align-items: center;
    justify-content: space-around;
    gap: 41%;
}
footer a,footer span{
    font-size: 12pt;
    font-weight: 50;
}
.copyright{
display: inline-block;
width: 150px;
}


/* stuff for the burger */
#recipeHomePage{
    background-image: url(/images/bengal-burger.jpg);
    height: 100%;
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    align-items: flex-end;
    justify-content: center;
}
.recipeTime{
    background-color: #DADFEA;
    padding: 30px;
}
.recipeInfo>div{
    display: inline-flex;
    flex-flow: column wrap;
    justify-content: space-around;
}
.recipeInfo>div:last-of-type{
    justify-content:flex-start;
}
.recipeInfo{
    width: 50%;
    display: flex;
    justify-content: space-between;
}
.recipeTime h3{
    font-size: 26pt;
}
.recipeInfo h4{
    font-size: 14pt;
}
.recipeTime span{
    font-weight: 100;
}
.recipeContainer{
    width: 90%;
    margin: 0 auto;
}
.recipeName{
    margin:4% 0;
}
.review{
    text-align: center;
    font-size: 20pt;
}
.review .stars{
    color: #A63223;
}
.recipeSave{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2%;
    margin: 2% 0;
}
.recipeSave button{
    font-size: 20pt;
    background-color: #A63223;
    border-radius: 30px;
    color: #fff;

    padding: 15px;
}
.recipeSave img{
    width: 35px;
    height: 35px;
    padding: 5px;
    object-fit: cover;
    border: 2px black solid;
    border-radius: 50%;
}
.recipeName h1{
    font-size: 55pt;
    text-align: center;
    font-family: 'Phudu', sans-serif;
}
.recipeHook{
    background-color: #DADFEA;
    font-size: 30pt;
    font-weight: 900;
    padding: 5%;
}
.recipeDoc{
    display: flex;
}
.ingredients{
    flex-grow: 2;
}
.ingredients>h1,.cookDirect>h1{
    margin-top: 10%;
}
.cookDirect{
    width: 50%;
}
li{
    font-size: 18pt;
}
ol>h4,ul>h4{
    font-size: 22pt;
    margin-top: 10%;
}
ol>li,ul>li{
    margin: 25px 0px;
}
ol{
    margin-bottom: 25%;
}
.vid{
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
}
.vid h2{
    margin-bottom: 2%;
}
iframe{
    margin-bottom: 5%;
}

